# retirement-free

./: .pre-commit-config.yaml  CLAUDE.md  TODO.md  pyproject.toml
.claude/commands/: ci-status.md  coverage.md  lint.md  new-module.md  test.md
.github/workflows/: ci.yml
src/retirement/: __init__.py
tests/: test_retirement.py
