[project]
name = "retirement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rafal Jabrzemski", email = "rjabrzemski@ou.edu" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
retirement = "retirement:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
